--- a/photo-port/package.json
+++ b/photo-port/package.json
@@ -2,7 +2,7 @@
   "name": "photo-port",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://WinnieCWu.github.io/photo-port",
+  "homepage": "https://winniecwu.github.io/e-photography-portfolio/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^11.1.0",
