--- a/photo-port/package.json
+++ b/photo-port/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "photo-port",
+  "name": "e-photography-portfolio",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://winniecwu.github.io/e-photography-portfolio/",
